# Copyright 2024 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/assembly/board_input_bundle.gni")
import("//build/bazel/assembly/bazel_board_configuration.gni")

group("bazel_inputs") {
  deps = [ "//src/devices/misc/drivers/virtio-socket:package.bazel_input" ]
  if (target_cpu == "x64") {
    deps += [ "//src/devices/board/drivers/x86:package.bazel_input" ]
  } else if (target_cpu == "arm64") {
    deps += [ "//src/devices/board/drivers/crosvm:package.bazel_input" ]
  } else {
    assert("Unsupported target_cpu ${target_cpu}.")
  }
}

# NOTE: The targets below are NOT (and should NOT be) used by assembly in GN.
# They are picked up by `//boards`, build API modules, and some release builders.
bazel_board_configuration("x64") {
  board_name = "pkvm-x64"
  bazel_board_configuration_target = "//boards/pkvm:x64"
  deps = [ ":bazel_inputs" ]
}

bazel_board_configuration("arm64") {
  board_name = "pkvm-arm64"
  bazel_board_configuration_target = "//boards/pkvm:arm64"
  deps = [ ":bazel_inputs" ]
}
