# Copyright 2024 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_board_input_bundle",
)

package(default_visibility = ["//visibility:public"])

fuchsia_board_input_bundle(
    name = "bazel_drivers",
    bootfs_driver_packages = [
        "//src/devices/board/drivers/vim3-devicetree",
        "//src/devices/clock/drivers/vim3-clk",
        "//src/devices/gpio/drivers/aml-gpio",
        "//src/devices/i2c/drivers/aml-i2c",
        "//src/devices/usb/drivers/aml-usb-phy",
        "//src/ui/input/drivers/adc-buttons",
        "//src/media/audio/drivers/aml-g12-tdm:aml-g12-composite",
    ],
)
